# GateKrumpa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_BACKLOG.md  LICENSE  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: default.yaml  default_creds.txt
src/krumpa/: __init__.py  __main__.py
src/krumpa/aifuzz/: __init__.py  approval_fatigue.py  context_poisoner.py  encoding_smuggler.py  goal_hijacker.py  guardrail_bypass.py  indirect_injector.py  inter_agent_tester.py  jailbreak_tester.py  module.py  prompt_injector.py  protocol_abuser.py  response_analyzer.py  system_prompt_extractor.py  token_smuggler.py  visual_attacker.py
src/krumpa/bosskey/: __init__.py  auth_probe.py  auth_scheme_enforcer.py  cloud_identity.py  concurrent_sessions.py  credential_transport.py  csrf_checker.py  jwt_attacks.py  lockout_tester.py  mfa_tester.py  module.py  oauth2_analyzer.py  password_policy.py  (+9 more)
tests/: test_phase1_to_4.py
tests/test_aifuzz/: __init__.py  test_context_poisoner.py  test_encoding_smuggler.py  test_goal_hijacker.py  test_module.py  test_prompt_injector.py  test_protocol_abuser.py  test_response_analyzer.py  test_system_prompt_extractor.py  test_token_smuggler.py
tests/test_bosskey/: test_auth_probe.py  test_module.py  test_session_analyzer.py
tests/test_cloudstrike/: __init__.py  test_aws_recon.py  test_iam_pathfinder.py  test_module.py  test_s3_auditor.py
tests/test_core/: test_ai_orchestrator.py  test_attack_chain.py  test_base_module.py  test_config_bridge.py  test_credentials.py  test_engine.py  test_events.py  test_exchange.py  test_http_client.py  test_hvt_scorer.py  test_models.py  test_multi_target.py  test_reporting.py  test_reporting_enhanced.py  test_reporting_sarif.py  test_tier2.py  test_tier3_critical.py
tests/test_grotassault/: test_fuzzer.py  test_module.py  test_mutator.py
tests/test_mcp/: test_server.py
tests/test_modelhunt/: __init__.py  test_module.py  test_supply_chain_auditor.py  test_vector_db_scanner.py  test_visual_attack_generator.py
tests/test_openkrump/: test_module.py  test_parser.py  test_sdk_generator.py  test_validator.py
tests/test_redteef/: test_confirmer.py  test_module.py  test_payload_builder.py
tests/test_reposcout/: __init__.py  test_module.py  test_pipeline_analyzer.py  test_repo_crawler.py  test_secret_scanner.py
tests/test_sneakygits/: test_cors_checker.py  test_crawler.py  test_fingerprint.py  test_header_audit.py  test_module.py  test_platform_exposure.py
tests/test_waaaghgate/: test_blast_radius.py  test_gate.py  test_module.py  test_reporter.py  test_verification_runner.py
tests/test_waaaghlogic/: test_flow_analyzer.py  test_idempotency_checker.py  test_module.py  test_rate_limit_tester.py
(+157 files in other folders)
