[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatekrumpa"
version = "0.1.0"
description = "A modular dynamic attack simulation platform for external APIs and game services."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GateKrumpa Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27,<1",
    "click>=8.1,<9",
]

[project.scripts]
gatekrumpa = "krumpa.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=5,<6",
    "pyright>=1.1,<2",
]
yaml = [
    "pyyaml>=6,<7",
]
mcp = [
    "mcp>=1.0,<2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["src/krumpa"]
