[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatekrumpa"
version = "0.2.0"
description = "A modular dynamic attack simulation platform for external APIs, cloud environments, AI/LLM systems, and source repositories."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [
    {name = "GateKrumpa Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27,<1",
    "click>=8.1,<9",
]

[project.scripts]
gatekrumpa = "krumpa.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=5,<6",
    "pyright>=1.1,<2",
    "moto[s3,iam,ec2,sagemaker]>=5,<6",
]
yaml = [
    "pyyaml>=6,<7",
]
mcp = [
    "mcp>=1.0,<2",
]
cloud = [
    "boto3>=1.34,<2",
    "botocore>=1.34,<2",
]
ai = [
    "autogen-agentchat>=0.4,<1",
    "openai>=1.0,<2",
]
art = [
    "adversarial-robustness-toolbox>=1.17,<2",
]
repo = [
    "PyGithub>=2.0,<3",
    "python-gitlab>=4.0,<5",
]
vision = [
    "Pillow>=10,<12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["src/krumpa"]
